# clusterChatServer

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh  chat.sql  mysql.cnf
include/: public.h
include/server/: chatserver.h  chatservice.h  usermodel.h
include/server/db/: connectionPool.h  db.h
include/server/model/: friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemessagemodel.h  user.h  usermodel.h
include/server/redis/: redis.h
include/utils/: utils.h
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  friendmodel.cpp  main.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/db/: connectionPool.cpp  db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
